# captain-bible-re

./: .gitignore  AGENTS.md  FREEDOS_SETUP_INSTRUCTIONS.md  PLAN.md  README.md  run.sh  url.txt
.github/workflows/: pages.yml  publish-docs.yml
analysis/: cb.rz  opcode-audit.tsv  symbol-map.tsv
docs/: book.toml
docs/src/: SUMMARY.md  audio-formats.md  (+22 more)
rust-engine/: Cargo.toml  README.md  build.rs
rust-engine/src/: archive.rs  audio.rs  bytecode.rs  config.rs  engine.rs  error.rs  frontend.rs  graphics.rs  lib.rs  main.rs  save.rs  state.rs  text.rs  world.rs
rust-engine/src/frontend/: ui.rs
rust-engine/tests/: shipped_data.rs
spec/: book.toml
tests/: test_analyze_cb_exe.py  test_audio_formats.py  test_audit_bin_opcodes.py  test_check_documentation.py  test_extract_dd1.py  test_fullscreen_gallery.py  test_inspect_bin.py  test_inspect_map.py  test_inspect_runtime_tables.py  test_inspect_save.py  test_inspect_symbol_map.py  test_inspect_unibot.py  test_midpak_ad.py  test_opcode_documentation.py  test_patch_save_scene.py  test_render_art.py  test_setup_freedos_image.py  test_specification.py  test_text_resources.py
tools/: analyze_cb_exe.py  audit_bin_opcodes.py  build_qemu_dos_trace.sh  captain-bible-autoexec.bat  check_documentation.py  convert_abt.py  extract_dd1.py  inspect_bin.py  inspect_map.py  inspect_midpak_ad.py  inspect_runtime_tables.py  inspect_save.py  inspect_symbol_map.py  inspect_text_resources.py  inspect_unibot.py  inspect_xmi.py  patch_save_scene.py  qemu_dos_trace.c  render_art.py  render_fullscreen_gallery.py  setup_freedos_image.py
(+22 files in other folders)
